@@ -5,10 +5,10 @@ if (!isset($enterprise_edition)) $enterprise_edition=false;
 if ($enterprise_edition==true) {
 echo " 
     <center>
-      <a href=\"index.php\"><img src=\"$enterprise_logo\" alt=\"logo\" border=0></a>
+      <a href=\"index.php\"><img src=\"$enterprise_logo\" alt=\"logo\" border='0' /></a>
     </center>
 ";
 } else { 
-    echo "<a href=\"index.php\"><img src=\"pictures/deltasql.png\" alt=\"logo\" border=0></a>";
+    echo "<a href=\"index.php\"><img src=\"pictures/deltasql.png\" alt=\"logo\" border='0' /></a>";
 }
 ?>
