@@ -1,7 +1,8 @@
 3.4.2013 git
 - heavy refactoring of utils.inc.php, splitting the file in several subfiles -> makes page loading much faster :-)
-- extending export_project_execution.php to produce XML
+- extending export_project_execution.php to produce XML and HTML via XSLT (stylehseet added)
 - docs: adding 3 FAQ question on project
+- reorganizing links on main page
 - raising next version to 1.6.0
 
 2.4.2013 git
